--- a/views/_partial/contests.ejs
+++ b/views/_partial/contests.ejs
@@ -33,7 +33,7 @@
 							<td><%- contest_list[i].cid %></td>
 							<td>
 								<a href="contest/<%- contest_list[i].cid %>">
-									<%- contest_list[i].cid %>. <%- contest_list[i].ttl %>
+									<%- contest_list[i].ttl %>
 								</a>
 							</td>
 							<td>
