--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -39,6 +39,8 @@
                     <%- include('_partial/problem-statistics') %>
                   <% } else if (layout == 'score') { %>
                     <%- include('_partial/score') %>
+                  <% } else if (layout == 'solution') { %>
+                    <%- include('_partial/solution') %>
                   <% } %>
           </section>
       </div>
