--- a/views/_partial/problems.ejs
+++ b/views/_partial/problems.ejs
@@ -42,7 +42,11 @@
 </div>
 <div class="content">
 <% for (var level = 0 ; level < level_list.length ; level++ ) { %>
-	<h2 class="content-subhead"> Level <%- level_list[level].level %>. <%- level_list[level].ttl %> </h2>
+	<% if( level_list[level].level < 0 ) { %>
+	 <h2 class="content-subhead"> Side Track. <%- level_list[level].ttl %> </h2>
+	<% } else { %>
+	 <h2 class="content-subhead"> Level <%- level_list[level].level %>. <%- level_list[level].ttl %> </h2> 
+	<% } %>
 	<div class="pure-g">
 		<div class="pure-u-1-1">
 		<table class="pure-table" style="width: 100%">
