--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -41,6 +41,8 @@
                     <%- include('_partial/score') %>
                   <% } else if (layout == 'solution') { %>
                     <%- include('_partial/solution') %>
+                  <% } else if (layout == 'grade_problem') { %>
+                    <%- include('_partial/problem-grade') %>
                   <% } %>
           </section>
       </div>
