add yaml format setting

--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -12,6 +12,8 @@
 		<script type="text/javascript" src="/javascripts/problem.js"></script>
 		<script src="/javascripts/jquery-2.1.0.min.js"></script>
 		<script src="/javascripts/jquery.countdown.min.js"></script>
+		<script src="/javascripts/typed.js"></script>
+		<link rel="stylesheet" href="/stylesheets/terminal.css">
 	</head>
 	<body>
 		<div id="layout">
