--- a/views/_partial/scoreboard.ejs
+++ b/views/_partial/scoreboard.ejs
@@ -1,4 +1,4 @@
-<!-- <meta http-equiv="refresh" content="10" /> -->
+<meta http-equiv="refresh" content="30" />
 
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
@@ -6,6 +6,7 @@
 
 <div class="header">
 	<h1 class='article-title'>Scoreboard</h1>
+	<h2> Contest. <%- table_config.cid %></h2>
 </div>
 <div class="content">
 	<div id="bar-progress"></div>
@@ -15,7 +16,7 @@
 				<th style="width: 15%;">Score</th>
 				<% var width = 85 / Math.max(table_config.header.length, 1); %>
 				<% for (var row = 0; row < table_config.header.length; row++) { %>
-					<th style="width:<%- width %>%"><%- table_config.header[row].ttl %></th>
+					<th style="width:<%- width %>%"><a href="/problem/<%- table_config.cid %>/<%- table_config.header[row].pid %>"><%- table_config.header[row].ttl %></a></th>
 				<% } %>
 			</tr>
 		</thead>
@@ -97,7 +98,7 @@
 					<th data-type="string" data-sortable="true" data-name="User" style="width: 15%;"></th>
 					<% var width = 85 / Math.max(table_config.header.length, 1); %>
 					<% for (var row = 0; row < table_config.header.length; row++) { %>
-						<th data-type="string" data-sortable="true" data-name="<%- table_config.header[row].ttl %>" style="text-align:"><%- table_config.header[row].ttl %></th>
+						<th data-type="string" data-sortable="true" data-name="P<%- String.fromCharCode(65 + row)  %>"></th>
 						<th data-type="int" data-sortable="true" data-name="Score">Score</th>
 						<th data-type="int" data-sortable="true" data-name="Subs">Subs</th>
 					<% } %>
@@ -130,14 +131,14 @@
 									filter += '&uid=' + table_config.user[row].uid;
 								%>
 								<% if (score != 100) { %>
-									<td><span class="result6">Wrong Answer </span></td>
+									<td><span class="result6">WA </span></td>
 								<% } else { %>
-									<td><span class="result7">Accepted </span></td>
+									<td><span class="result7">AC </span></td>
 								<% } %>
 								<td><%- score %></td>
 								<td><a href="/submissions?<%- filter %>"><%- times %></a></td>
 						<% } else { %>
-							<td> NO RESULT </td>
+							<td> NO </td>
 							<td> 0 </td>
 							<td> 0 </td>
 						<% } %>
