add login message & testdata set view link

--- a/public/stylesheets/pure-release-0.6.0/slide-menu.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu.css
@@ -14,6 +14,21 @@ body {
   position: relative;
   text-align: center;
 }
+.footer {
+    background: #111;
+    color: #7f8c8d;
+    padding: 1em 1em;
+    bottom: 0px;
+    margin-top: 250px;
+}
+.footer a {
+    text-decoration: none;
+    color: #7f8c8d;
+    font-weight: bold;
+}
+.footer a:hover {
+    color:  #333;
+}
 .dsq-widget {
   background: none repeat scroll 0% 0% #333534;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.9);
@@ -217,9 +232,12 @@ The content `<div>` is where all your content goes.
 .content {
     margin: 0 auto;
     padding: 0 2em;
-    max-width: 800px;
+    max-width: 75%;
     margin-bottom: 50px;
     line-height: 1.6em;
+}
+.content p {
+  font-size: 1em;
 }
 
 .header {
@@ -243,7 +261,7 @@ The content `<div>` is where all your content goes.
 
 .content-subhead {
     margin: 20px 0 20px 0;
-    color: black;
+    color: gray;
 }
 
 
