--- a/views/_partial/solution.ejs
+++ b/views/_partial/solution.ejs
@@ -30,20 +30,7 @@
 	<h2><div class="sysmsg">解法思路未提供</div></h2>
 <% } %>
 
-<h2> Discussion</h2>
-			<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'ntucsiecprogramming';
-    
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<%- include('widget/disqus')  %>
 
 
 </div>
