--- a/views/_partial/login.ejs
+++ b/views/_partial/login.ejs
@@ -3,7 +3,9 @@
 	<h2>If you have any login problem, please contact TA.</h2>
 </div>
 <div class="content">
-
+<% if (sysmsg && sysmsg.length > 0) { %>
+	<div class='sysmsg'><%- sysmsg %></div>
+<% } %>
 <form class="pure-form pure-form-aligned" action="login" method="post" style="float: center;">
     <fieldset>
         <legend>Login</legend>
