--- a/views/_partial/problem.ejs
+++ b/views/_partial/problem.ejs
@@ -23,9 +23,12 @@
 </div>
 
 <%- problem_content %>
-<h2>Submit</h2>
+<div class="pure-g">
+	<div class="pure-u-2-3">
+	<h2 class="content-subhead">Submit</h2>
 <% if( canSubmit ) { %>
 	<form class="pure-form  pure-form-aligned" action="/submit" method="post" enctype="multipart/form-data" id="submit_form">
+		<fieldset>
 		<input name="cid" type="hidden" value="<%- cid %>">
 		<input name="pid" type="hidden" value="<%- pid %>">
 		<% if( psubmit.length === 0 ){ %>
@@ -40,20 +43,21 @@
 
 			<div class="pure-control-group">
 				<label for="lng"><%= __('Source Code') %></label>
-				<input class="pure-input-2-3" name="code0" type="file">
+				<input class="pure-input-1-2" name="code0" type="file">
 			</div>
 
 		<% } else { %>
 			<% for( var i = 0 ; i < psubmit.length ; i++ ){ %>
 				<div class="pure-control-group">
 					<label for="code<%- i %>"><%- psubmit[i] %></label>
-					<input class="pure-input-2-3" name="code<%- i %>" type="file">
+					<input class="pure-input-1-2" name="code<%- i %>" type="file">
 				</div>
 			<% } %>
 		<% } %>
 			<div class="pure-controls">
 				<button type="submit" name="submit" id="submit" class="pure-button pure-button-primary"><%= __('Submit') %></button>
 			</div>
+		</fieldset>
 	</form>
 
 	<script>
@@ -62,22 +66,28 @@
 		if(!answer){ event.preventDefault(); }
 	});
 	</script>	
+<% } else { %>
+	<a class="button-success pure-button" href="/login"><i class="fa fa-sign-in"></i> <%= __('Login') %></a>
 <% } %>
+	</div>
+	<div class="pure-u-1-3">
+		<h2 class="content-subhead">Testdata Set</h2>
+    	<div class="pure-menu">
+		    <ul class="pure-menu-list">
+	    	<% for (var i in testdata_config) { %>
+	    		<% var testset = testdata_config[i]; %>
+	    		<li class="pure-menu-item">
+	    			<a href="https://github.com/JudgeGirl/JG-testdata/blob/master/practice/<%- pid %>/<%- testset[1][0] %>" class="pure-menu-link" style="padding: 0em 0.1em;">
+	    			<%- __('Subtask') %> <%- (parseInt(i)) %> (<%- testset[0] %>%): <%- config.unitConvert('cpu', testset[1][2]*1024) %>, <%- config.unitConvert('mem', testset[1][3]) %>
+	    			</a>
+	    		</li>
+	    	<% } %>
+		    </ul>
+		</div>
+	</div>
+</div>
 
-<h2> Discussion</h2>
-			<div id="disqus_thread" class="dsq-widget"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = 'ntucsiecprogramming';
-    
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<%- include('widget/disqus')  %>
 
 
 </div>
