add README.md & layout fixed

--- a/views/_partial/livesubmission.ejs
+++ b/views/_partial/livesubmission.ejs
@@ -13,6 +13,7 @@ table .problem-title a {
 	<h1 class='article-title'>Live Submission</h1>
     <h2>Auto update</h2>
 </div>
+<div class="content">
 <% if (config.CONTEST_MODE == true) { %>
 	<div class="sysmsg">考試正在進行</div>
 <% } %>
@@ -259,4 +260,4 @@ table .problem-title a {
 			});
 			</script>
 
-
+</div>
