--- a/views/_partial/submissions.ejs
+++ b/views/_partial/submissions.ejs
@@ -18,6 +18,7 @@ table .problem-title a {
 	<h1 class='article-title'>Submission</h1>
     <h2>Update page each 10 seconds</h2>
 </div>
+<div class="content">
 	<% if (config.CONTEST_MODE == true) { %>
 	<div class="sysmsg">考試正在進行</div>
 	<% } %>
@@ -109,4 +110,4 @@ table .problem-title a {
 			<% } %>
 			</div>
 	</div>
-
+</div>
