--- a/views/_partial/user.ejs
+++ b/views/_partial/user.ejs
@@ -47,8 +47,6 @@
 	</tbody>
 </table>
 
-</div>
-
 <h2><%- __('Recent Submission') %></h2>
 
 <table class="pure-table pure-table-bordered" sytle="width: 150%">
@@ -57,7 +55,6 @@
 			<th class='sid-header' style="width: 5%">#</th>
 			<th style="width: 5%"></th>
 			<th style="width: 30%">Problem Title</th>
-			<th style="width: 10%">Username</th>
 			<th style="width: 20%">Verdict</th>
 			<th style="width: 5%"></th>
 			<th style="width: 10%">Len</th>
@@ -72,8 +69,7 @@
 	<tr class='normal'>
 		<td class='sid'><%- sl[i].sid %></td>
 		<td><%- sl[i].pid %></td>
-		<td class='problem-title'><a href='problem/<%- sl[i].cid %>/<%- sl[i].pid %>'><%- sl[i].ttl %></a></td>
-		<td><a href='user/<%- sl[i].uid %>'><%- sl[i].lgn %></td>
+		<td class='problem-title'><a href='/problem/<%- sl[i].cid %>/<%- sl[i].pid %>'><%- sl[i].ttl %></a></td>
 		<% 
 			var text = '';
 			text += "<td class='status' data-res=" + sl[i].res + " data-sid=" + sl[i].sid + ">";
@@ -105,3 +101,4 @@
 	</tbody>
 </table>
 
+</div>
